Remove z-index to fix dropdown in backend

--- a/src/js/components/Form/Form.scss
+++ b/src/js/components/Form/Form.scss
@@ -77,7 +77,6 @@
 
     & > div, & > div > div {
       max-width: 100%;
-      z-index: 101;
 
       *::after {
         box-sizing: initial;
